--- a/css/estilo.css
+++ b/css/estilo.css
@@ -207,7 +207,7 @@ img:nth-child(5) {
   color: white;
   text-align: center;
   font-size: 15px;
-  margin: 0;
+  margin: 8px;
   padding: 0;
   padding-top: 3px;
   padding-bottom: 3px;
